--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "@popperjs/core": "2.9.1",
-    "@tailwindcss/forms": "0.2.1",
-    "autoprefixer": "10.2.5",
+    "@tailwindcss/forms": "^0.5.9",
+    "autoprefixer": "^10.4.20",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
-    "postcss": "8.4.39",
+    "postcss": "^8.4.49",
     "react": "18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "18.3.1",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "2.0.4"
+    "tailwindcss": "^3.4.15"
   },
   "scripts": {
     "start": "react-scripts start",
