--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "chart.js": "2.9.4",
+    "date-arithmetic": "^4.1.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "postcss": "^8.4.49",
     "react": "18.3.1",
-    "react-big-calendar": "^1.15.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "18.3.1",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
