--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-big-calendar": "^1.18.0",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
     "react-scripts": "^5.0.1",
